js/js.translator/testData/incremental/invalidation/jsName/lib2/lib.0.kt
open class FooBarImpl : Bar(), Foo {
   override fun foo() = "FooImpl"
}